boton enviar invisible
* agregado formulario para poder hacer envio con enter
* el submit se envia desde el teclado


Former-commit-id: eafdc8ab28ae31436fa80b3363030241f5a67e9b [formerly da941bb23666a53e034df0f15a3d194559d22957]
Former-commit-id: e62bd1f0ec5c7d58a750cf727b0804c629ef0707

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1396,6 +1396,16 @@ loader.s32,.loader.s32{
 .msgShipp, .msgShipp + div{ text-align: center; }
 .msgShipp p{ text-align: left; }
 .dnone{ display:none; }
+.invisible{
+	width:0px !important;
+	height:0px !important;
+	margin:0px !important;
+	padding:0px !important;
+	border:none !important;
+	visibility:hidden !important;
+	/*display:inline-block !important;*/
+	/*overflow:hidden !important;*/
+}
 
 /*Estilos phone contacts APP*/
 .status-invitation{
