--- a/app/cometchat/css/i.css
+++ b/app/cometchat/css/i.css
@@ -55,7 +55,7 @@ body {
 
 .title div.home {
 	left:0;
-	background-image: url(smt/home_.png);
+	background-image: url(smt/menu.png);
 }
 .title div.back {
 	left:0;
