--- a/app/cometchat/css/m.css
+++ b/app/cometchat/css/m.css
@@ -71,7 +71,7 @@ body {
 
 .title div.home {
 	left:0;
-	background-image: url(smt/home_.png);
+	background-image: url(smt/menu.png);
 }
 .title div.back {
 	left:0;
