svg para store Badges
Former-commit-id: 9a1273135678e9eb1efe045a1e5737e31eb704df [formerly 79a9420cadb72acc91af07924a1a4f66f34348b4]
Former-commit-id: 0cf52559cb18ba48c0bf4d9720e21d0a866c35ed

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -169,7 +169,7 @@ page container#home .appLinks #gPlay{
 	height: 40px;
 	margin: 5px 0 0 0;
 	width: 39%;
-	background: url('tbum/icon_googlePlay.png') no-repeat;
+	background: url('tbum/icon_googlePlay.svg') no-repeat;
 	float: left;
 }
 page.unlogged footer{
