--- a/local/xdk/css/seemytag.css
+++ b/local/xdk/css/seemytag.css
@@ -1145,7 +1145,7 @@ loader.s32,.loader.s32{
 	margin:0 auto;
 	cursor: pointer;
 }
-.store-info .googlePlay{ background-image:url('smt/icon_googlePlay.png'); }
+.store-info .googlePlay{ background-image:url('smt/icon_googlePlay.svg'); }
 .store-info .appStore{ background-image:url('smt/icon_appStore.png'); }
 
 #idProductContent{ font-size:12px; }
