--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1722,3 +1722,23 @@ input.password-field {
 #btn-signup,#btn-login,.btn-facebook{
 	padding:0px 10px;
 }
+
+/*Loader feo*/
+.ui-body-a{
+	background: transparent;
+	background-color: transparent;
+	background-image: none;
+}
+.ui-loader{
+	top: 0;
+	left: auto;
+	right: 50px;
+}
+.ui-loader-default{
+	margin: 0;
+	padding: 0;
+}
+
+.ui-loader .ui-icon{
+	background-color: transparent;
+}
