--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1722,3 +1722,9 @@ input.password-field {
 #btn-signup,#btn-login,.btn-facebook{
 	padding:0px 10px;
 }
+.userlink span[data-iconpos="notext"]{
+	position: initial;
+	height: 100%;
+	width: 100%;
+	margin: auto;
+}
