report tag wpanel
Former-commit-id: 4bb635573da8f55f39594f1e653fa2472540b654

--- a/wpanel/css/estilo.css
+++ b/wpanel/css/estilo.css
@@ -139,6 +139,12 @@ legend{
 	font-weight:bold;
 }
 
+.pagnew{
+	border: 1px solid #000;
+	padding: 4px;
+	margin: 0 2px;
+}
+
 /*
 <!-- 
 		+ --------------------------------------------------------- +
