ajustes css tour
Former-commit-id: d90ad7122a76b7fe9cad288c3734c5727b3d2086 [formerly 9aa068a14e517b4b6c2d52620f9caf9b51cd58b3]
Former-commit-id: 93fd6c976c237c04d1b92ebe359e90400817094d

--- a/css/guidely/guidely.css
+++ b/css/guidely/guidely.css
@@ -1,5 +1,5 @@
 .guidely-number {
-	background: url(guidely-number.png) no-repeat 0 0;
+	background: url(guidely/guidely-number.png) no-repeat 0 0;
 	width: 40px;
 	height: 40px;
 	display: none;
