--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1808,3 +1808,11 @@ input.password-field {
 	-o-transform: rotate(180deg);
 	transform: rotate(180deg);
 }
+#rowTitle{
+	text-align: center;
+	font-weight: bold;
+	margin: 5px auto;
+	background: #77c574;
+	color: #fff;
+	padding: 4px 0;
+}
