--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1816,3 +1816,17 @@ input.password-field {
 	color: #fff;
 	padding: 4px 0;
 }
+.ui-btn-up-e,.ui-btn-hover-e {
+	border: 1px solid #3DB5E8;
+	background: #3DB5E8;
+	font-weight: bold;
+	color: white;
+	text-shadow: 0 1px 0 #fff;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3DB5E8 ), to( #3DB5E7 ));
+	background-image: -webkit-linear-gradient( #3DB5E8, #3DB5E7 );
+	background-image: -moz-linear-gradient( #3DB5E8, #3DB5E7 );
+	background-image: -ms-linear-gradient( #3DB5E8, #3DB5E7 );
+	background-image: -o-linear-gradient( #3DB5E8, #3DB5E7 );
+	background-image: linear-gradient( #3DB5E8, #3DB5E7 );
+}
+.ui-btn-hover-e:hover{ color: white; }
