Pequeño arreglo campo  de comentario en Timeline(APP)
Former-commit-id: 34081c0827d352100bb6b32829daf0558d7dfa90 [formerly 6db6c6fc095e99b61e1168e0ffdcbdd7ea7b6db5]
Former-commit-id: f170d6e9167f5d83a4878b13ea7eef2baba6473c

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1574,7 +1574,8 @@ input.password-field {
 }
 
 #commenting{
-	width: 99%;
+	min-width: 99%;
+	max-width: 184px;
 }
 
 #comments .ui-btn-up-c, #comments .ui-bar-e{
