Cambios comentarios timeline
Former-commit-id: 42d46247f80d70c9b4a251b0e8581ac7a6de5ad3

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1575,7 +1575,7 @@ input.password-field {
 
 #commenting{
 	min-width: 99%;
-	max-width: 184px;
+	max-width: 97%;
 }
 
 #comments .ui-btn-up-c, #comments .ui-bar-e{
