color calendar signup
Former-commit-id: df96fdb82bf0a4ff02689cef94d934cb26b90267 [formerly 79502a36730591ae8c2502282a1e3b24e3464a57]
Former-commit-id: 83056635134a47af907cb8885297d9bf8144d372

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -6036,3 +6036,7 @@ td.ui-smt-help #urlTag{
 	height: 30px;
 }
 #boxUserLstSeemytag img{ border-radius: 50%; }
+#ui-datepicker-div select,
+#ui-datepicker-div select option{
+	color: black;
+}
