Pequeños arreglos commenting
Former-commit-id: 6f02df417d9d6a01db9be47edadc87375b2206ad

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1574,8 +1574,15 @@ input.password-field {
 }
 
 #commenting{
-	min-width: 185px;
-	max-width: 99%;
+	min-width: 160px;
+	width: 92%;
+	max-width: 97%;
+}
+
+@media screen and (min-width:720px){
+	#commenting{
+		width: 99%;
+	}
 }
 
 #comments .ui-btn-up-c, #comments .ui-bar-e{
