--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -3965,7 +3965,8 @@ height: 150px;}
 #store .gallery-box .bg{
 	width:100%;
 	height:100%;
-	position:absolute
+	position:absolute;
+	background-position:center center;
 }
 #store .gallery-box .thumbs{
 	float:right;
