Bug configuracion emails, plus xdk
Former-commit-id: fc66e64840a44663f946e6ec49c01195ae8b04b1 [formerly f431bd9cce02a46365ed15116322464ada50a038]
Former-commit-id: d1efdcc2817c3632dcb123c69dc79a00e11bbc53

--- a/app/css/jquery.mobile.custom.css
+++ b/app/css/jquery.mobile.custom.css
@@ -68,7 +68,7 @@
 
 .ui-page .ui-header.ui-bar-f,.ui-page .ui-footer.ui-bar-f{
 	border:none;
-	background-color: #f93;
+	background-color: #F5872D;
 	-webkit-box-shadow:0 0 5px #000;
 	-moz-box-shadow:0 0 5px #000;
 	box-shadow:0 0 5px #000;
