Cambios en colores
Former-commit-id: e869d40ac9d1863dc37775088902f068731cdcc2 [formerly 86020265a793073486375df3b7ac5f0260fcd676]
Former-commit-id: 1d7c308b645625d8860ce8aa632aaebff9993cc3

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1103,7 +1103,7 @@ loader.s32,.loader.s32{
 .needed,.single,.enterp,.pullDownLabel,.pullUpLabel,.is-logged{}
 
 #userPoints{
-	background:#77c574;
+	background:#03A993;
 	height:15px;
 	font-size:13px;
 	padding: 3px 10px;
@@ -1856,7 +1856,7 @@ input.password-field {
 	text-align: center;
 	font-weight: bold;
 	margin: 5px auto;
-	background: #77c574;
+	background: #03A993;
 	color: #fff;
 	padding: 4px 0;
 }
