--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -17,20 +17,14 @@ page>header{
 	left:0;
 	right:0;
 	min-width:1000px;
-	background:#f72 url('smt/headerbg.png') no-repeat left top;
 	background-size:100% 100%;
-	background-image:-webkit-gradient(linear,left top,left bottom,from(#f93),to(#e60));
-	background-image:-webkit-linear-gradient(#f93,#e60);
-	background-image:-moz-linear-gradient(#f93,#e60);
-	background-image:-ms-linear-gradient(#f93,#e60);
-	background-image:-o-linear-gradient(#f93,#e60);
-	background-image:linear-gradient(#f93,#e60);
 	font-size:16px;
 	-webkit-box-shadow:0 0 10px #000;
 	-moz-box-shadow:0 0 10px #000;
 	box-shadow:0 0 10px #000;
 	height:60px;
 	z-index:500;
+	background:#F57133;
 }
 page.unlogged>header{
 	position:fixed;
@@ -337,7 +331,7 @@ page wrapper button,page wrapper input[type="submit"],page wrapper input[type="r
     display:inline-block;
 }
 
-.btn.btn-success{ background-color:#77c574; }
+.btn.btn-success{ background-color:#03A993; }
 .btn.btn-success:hover{ background-color:#55a352; }
 .btn.btn-primary{ background-color:#8286c2; }
 .btn.btn-primary:hover{ background-color:#6064a0; }
@@ -1536,7 +1530,7 @@ footer a:hover{ text-decoration:none; }
 .color-a,a.color-a,.color-a a{ color:#ee6323; }
 .color-b,a.color-b,.color-b a{ color:#fddfc6; }
 .color-c,a.color-c,.color-c a,content,content a{ color:#444; }
-.color-d,a.color-d,.color-d a{ color:#77c574; }
+.color-d,a.color-d,.color-d a{ color:#03A993; }
 .color_dolar{ color:#A4D8A2 !important; }
 .color-e,a.color-e,.color-e a{ color:#ccc; }
 .color_green{ color:green !important; }
@@ -1737,7 +1731,7 @@ container.wrapper .right-panel #adsListPubliNew #publiImg img{
 }
 
 container .left-panel .points_box .acumulate_box,#backgroundRedeenPoint{
-	background-color:#77c574;
+	background-color:#03A993;
 	width:70px;
 	padding:5px 0px;
 	color:#FFF;
@@ -1800,7 +1794,7 @@ container .left-panel .menus ul li#store a{
 	color:#71cbe9;
 }
 container .left-panel .menus ul li#cretationTag{
-	background-color: #77C574;
+	background-color: #03A993;
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
 	border-radius:10px;
@@ -2544,7 +2538,7 @@ a.plus:hover{
 }
 .ctg{
 	margin: 10px 10px 20px 0;
-	background-color: #77C574;
+	background-color: #03A993;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
@@ -5825,7 +5819,7 @@ container #pageNews .news-wrapper #news-here div[tipo="30"]{
 .side-box.news>header span{
 	background-image:url('tbum/box-title/news.png');
 	padding-left:45px;
-	color:#77c574;
+	color:#03A993;
 }
 .side-box.store-category,.side-box.store-category a{
 	color:#ee6323;
